--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,13 +7,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #007fff;
+  --ifm-color-primary-dark: #0072e6;
+  --ifm-color-primary-darker: #006cd9;
+  --ifm-color-primary-darkest: #0059b3;
+  --ifm-color-primary-light: #1a8cff;
+  --ifm-color-primary-lighter: #2692ff;
+  --ifm-color-primary-lightest: #4da5ff;
   --ifm-code-font-size: 95%;
 }
 
